<resources>
<!--    <string name="app_name">SelenVOIP</string>-->
<!--    <string name="action_settings">Settings</string>-->
<!--    &lt;!&ndash; Strings used for fragments for navigation &ndash;&gt;-->
<!--    <string name="first_fragment_label">First Fragment</string>-->
<!--    <string name="second_fragment_label">Second Fragment</string>-->
<!--    <string name="next">Next</string>-->
<!--    <string name="previous">Previous</string>-->

<!--    <string name="lorem_ipsum">-->
<!--        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris-->
<!--        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus-->
<!--        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad-->
<!--        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend-->
<!--        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,-->
<!--        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n-->
<!--        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus-->
<!--        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed-->
<!--        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada-->
<!--        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,-->
<!--        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor-->
<!--        bibendum, vel congue leo egestas.\n\n-->
<!--        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit-->
<!--        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,-->
<!--        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer-->
<!--        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at-->
<!--        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,-->
<!--        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque-->
<!--        est.\n\n-->
<!--        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.-->
<!--        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui-->
<!--        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In-->
<!--        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,-->
<!--        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra-->
<!--        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a-->
<!--        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus-->
<!--        convallis.\n\n-->
<!--        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et-->
<!--        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa-->
<!--        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,-->
<!--        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper-->
<!--        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus-->
<!--        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus-->
<!--        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.-->
<!--    </string>-->
        <string name="app_name">SELEN VOIP</string>
        <string name="action_settings">Settings</string>
        <string name="main_button">CALL HQ</string>
        <string name="network_status">Internet Status</string>
        <string name="call_status">Call Status</string>
        <string name="internet_down">No Internet</string>
        <string name="internet_up">Internet OK</string>
        <string name="run_mode_status">RUN MODE</string>
        <string name="library_started_message_background">RUNNING IN BACKGROUND MODE</string>
        <string name="library_started_message_foreground">RUNNING IN FOREGROUND MODE</string>
        <string name="caller_info">Caller Info</string>
        <string name="registration_status">Registration Status</string>
        <string name="debugButtonText">debug</string>
        <string name="mute_microphone">Mute Microphone</string>
        <string name="hang_up">Hang Up</string>
        <string name="switch_camera">Switch Camera</string>
        <string name="cancel_call">Cancel Call</string>
        <string name="call_out">Call out</string>
        <string name="peer_uri">Peer URI</string>
        <string name="early">early</string>
        <string name="calling">Calling</string>
        <string name="incoming">Incoming Call</string>
        <string name="connecting">Connecting</string>
        <string name="confirmed">Confirmed</string>
    <string name="call">Call</string>
        <string name="enter_destination_number">Enter destination number</string>
        <string name="hq_default_number_string">9999</string>
    <string name="camera_switch">Camera Switch</string>
    <string name="decline">Decline</string>
        <string name="accept">Accept</string>
</resources>